--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 
 	color-scheme: light dark;
 	color: rgba(0, 0, 0, 0.87);
-	background-color: white;
+	background-color: rgb(37, 37, 37);
 
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
